Day 7/Day.txt
>>> t
(1234, 4321, 'hello')
>>> t[0]
1234
>>> u=t,(1,2,3,4)
>>> u
((1234, 4321, 'hello'), (1, 2, 3, 4))
>>> t[0]=7890
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: 'tuple' object does not support item assignment
>>> boys = ['naeem','abdul','salik','ahmed']
>>> girls=['
  File "<stdin>", line 1
    girls=['
           ^
SyntaxError: EOL while scanning string literal
>>>
>>> girls=['uzma','alfiyah','zaid']
>>> vl = boys,girls
>>> vl
(['naeem', 'abdul', 'salik', 'ahmed'], ['uzma', 'alfiyah', 'zaid'])
>>> girls[2]='namrin'
>>> vl
(['naeem', 'abdul', 'salik', 'ahmed'], ['uzma', 'alfiyah', 'namrin'])
>>>
>>> others=[]
>>> nvl=vl,others
>>> nvl
((['naeem', 'abdul', 'salik', 'ahmed'], ['uzma', 'alfiyah', 'namrin']), [])
>>>